# ADcalc

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  data_diff.txt  readme_example.md  res.csv
Alg/: ControlPulse.h  ControlPulseD.h  ControlTone.h  ControlToneD.h  DiffFilter.h  Filters.h  PulsOnlyDetect.h  PulseDetect.h  README.md  RoundBuf.h  StateMachine.h  SumFilter.h  TestControlAd.h  ToneDetect.h  ToneOnlyDetect.h  WorkMode.h  arithm.h  badsplit.h  estimate_AD_tone.h  header_rw.h  main.cpp  newdetectorstest.cpp
compare statistics/Noise Base/: pres_stat.csv  tone_stat.csv
data/: PX113211018182653.hdr
drafts/: draft.cpp  my_tonedetect_test.jl  stuff.jl  сравнение вручную.txt
from firmware/: ControlAd.cpp  ControlAd.h  TypeLib.h
from gvg/: Step1.mlapp  Step3.mlapp  estimate_AD_tone_v2.m  main_AD_final.m  test_calc_AD_v3.m  test_calc_tone_v3.m
from webdevice/: Events.h  PulsQrsDetect.h  ToneOnlyDetect.h  ToneQrsDetect.h
scripts/: DiffFilter.h  PulsOnlyDetect.h  SumFilter.h  ToneOnlyDetect.h  badsplit.h  copyv2.cpp  diff_filter.h  header.h  header_rw.h  markup_compare.jl  markup_reduction.jl  run.jl  stuff.jl  test.cpp  test.jl  visualisation.jl  wb.cpp  xLog.h
src/: api.h  bypointcompare.jl  filtrebuind.m  readfiles.jl
